tests/toylang/neg/001278_mutation.toylang
program a = { then a : bool; } .
